# Kube-AI-Proxy

./: Dockerfile  LICENSE  README.md  batch.jsonl  describe-kubectl.json  init.json  list.json  pyproject.toml  rpc.json  rpc.txt
src/kube_ai_proxy/: cli_executor.py  config.py  main.py  prompts.py  tools.py
src/kube_ai_proxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/kube_ai_proxy/executor/: argocd.py  helm.py  istioctl.py  kubectl.py
src/kube_ai_proxy/mcp/: __init__.py
src/kube_ai_proxy/security/: rbac_checker.py  security.py
